<resources>
    <string name="app_name">PKL Paninti</string>
    <string name="welcome_parents">Selamat Datang, Parents!</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="login">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="continue_google">Lanjutkan dengan Google</string>
    <string name="text_register">Belum punya akun? Daftar Disini</string>
    <string name="text_login">Sudah punya akun? Masuk Sekarang</string>
    <string name="gender">Jenis Kelamin</string>


    <!-- TODO: Register String on Below -->
    <string name="full_name">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="gender_male">Laki-Laki</string>
    <string name="gender_female">Perempuan</string>
    <string name="or">Atau</string>
    <string name="email_or_username">Email atau Username</string>
    <string name="placeholder_fullname">Masukan Nama Lengkap</string>
    <string name="placeholder_username">Masukan Username</string>
    <string name="placeholder_email">Masukan Email</string>
    <string name="placeholder_password">Masukan Password</string>
    <string name="placeholder_confirm_password">Masukan Password kembali</string>


    <string name="error_text_null_email_and_username">Email atau Username wajib diisi</string>
    <string name="error_text_null_password">Password wajib diisi</string>
    <string name="error_text_null_fullname">Nama lengkap wajib diisi!</string>
    <string name="error_text_null_username">Username wajib diisi!</string>
    <string name="error_text_null_email_address">Email wajib diisi!</string>
    <string name="error_text_null_confirm_password">Konfirmasi Password wajib diisi!</string>
    <string name="error_text_regex_only_character">Tidak boleh mengandung unsur angka</string>
    <string name="error_text_regex_min_fullname">Nama lengkap minimal 2 karakter</string>
    <string name="error_text_regex_min_username">Username minimal 6 karakter</string>
    <string name="error_text_regex_format_email">Format email tidak sesuai</string>
    <string name="error_text_regex_password">Password minimal berisi 6 karakter, 1 huruf kapital dan 1 angka</string>
    <string name="error_text_regex_symbol_username">Username tidak bisa menggunakan simbol selain . dan _</string>
    <string name="error_text_validate_password">Konfirmasi password tidak sesuai!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_intensity">24%</string>
    <string name="dummy_time">10:00</string>
    <string name="text_info_chance_of_rain">Chance\nof Rain</string>
    <string name="text_desc_chance_of_rain">82%</string>
    <string name="text_info_humidity">Humidity</string>
    <string name="text_desc_humidity">24%</string>
    <string name="text_info_wind">Wind</string>
    <string name="text_desc_wind">13 km/h</string>
    <string name="text_cloudy">Cloudy</string>
    <string name="text_dummy_min_temp">17°</string>
    <string name="text_dummy_max_temp">24</string>
    <string name="text_tommorow">Tomorrow</string>
    <string name="text_seven_days">7 Days</string>
    <string name="text_today">Today</string>
    <string name="text_today_date">Monday, 17 May</string>
    <string name="dummy_current_temp">29°</string>
    <string name="dummy_location">Minks</string>
    <string name="text_celcius">°C</string>
    <string name="day_monday">Monday</string>
    <string name="text_cloud">Cloud</string>
    <string name="slash"> / </string>
</resources>