<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forecast_dark"
    tools:context=".Forecast.mvvm.ui.main.view.ForecastHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/custom_margin_10dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_circle_orange" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cardviewGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/textGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvGradient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            app:layout_constraintBottom_toTopOf="@id/cardviewGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/screen_margin">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/menuVertical"
                    android:layout_width="@dimen/icon_bookmark_height"
                    android:layout_height="@dimen/icon_bookmark_height"
                    android:src="@drawable/ic_menu_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCelcius"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu_vertical"
                    android:text="@string/text_celcius"
                    android:textAppearance="@style/TextAppearance.Forecast.HugeMavenPro"
                    app:layout_constraintEnd_toStartOf="@+id/menuVertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="@dimen/normal_margin"
                    android:gravity="center"
                    android:text="@string/dummy_location"
                    android:textAppearance="@style/TextAppearance.Forecast.HugeMavenPro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCelcius" />


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/viewIllustration"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="@dimen/zero_dp"
                    android:elevation="@dimen/custom_margin_10dp"
                    android:scaleType="fitCenter"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/tvCurrentTemp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading_circle_orange" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCurrentTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dummy_current_temp"
                    android:textAppearance="@style/TextAppearance.Forecast.MaxTemp"
                    app:layout_constraintBottom_toTopOf="@id/tvCurrentSituation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCurrentSituation"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:gravity="center"
                    android:text="@string/text_cloudy"
                    android:textAppearance="@style/TextAppearance.Forecast.CustomCurrentSituation"
                    app:layout_constraintBottom_toTopOf="@id/tvCurrentDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCurrentDate"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_margin"
                    android:gravity="center"
                    android:text="@string/text_today_date"
                    android:textAppearance="@style/TextAppearance.Forecast.CustomCurrentDate"
                    app:layout_constraintBottom_toTopOf="@id/divHomeDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divHomeDivider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_dp"
                    android:layout_marginVertical="@dimen/screen_margin"
                    app:dividerColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/imageHumidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageWind"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="@dimen/custom_icon_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_wind"
                    app:layout_constraintBottom_toTopOf="@id/tvDescWind"
                    app:layout_constraintStart_toStartOf="@+id/divHomeDivider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDescWind"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_desc_wind"
                    android:textAppearance="@style/TextAppearance.Forecast.SubOpenSans"
                    app:layout_constraintBottom_toTopOf="@id/tvInfoWind"
                    app:layout_constraintStart_toStartOf="@+id/divHomeDivider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvInfoWind"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="@dimen/huge_margin"
                    android:gravity="center|top"
                    android:text="@string/text_info_wind"
                    android:textAppearance="@style/TextAppearance.Forecast.BiasOpenSans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/divHomeDivider" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageHumidity"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="@dimen/custom_icon_height"
                    android:layout_marginTop="@dimen/screen_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_invert_colors"
                    app:layout_constraintBottom_toTopOf="@id/tvDescHumidity"
                    app:layout_constraintEnd_toStartOf="@+id/imageCloud"
                    app:layout_constraintStart_toEndOf="@id/imageWind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDescHumidity"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_desc_humidity"
                    android:textAppearance="@style/TextAppearance.Forecast.SubOpenSans"
                    app:layout_constraintBottom_toTopOf="@id/tvInfoHumidity"
                    app:layout_constraintEnd_toStartOf="@+id/tvDescChanceOfRain"
                    app:layout_constraintStart_toEndOf="@id/tvDescWind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvInfoHumidity"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="@dimen/huge_margin"
                    android:gravity="center|top"
                    android:text="@string/text_info_humidity"
                    android:textAppearance="@style/TextAppearance.Forecast.BiasOpenSans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvInfoChanceOfRain"
                    app:layout_constraintStart_toEndOf="@id/tvInfoWind" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageCloud"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="@dimen/custom_icon_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_moisture"
                    app:layout_constraintBottom_toTopOf="@id/tvDescChanceOfRain"
                    app:layout_constraintEnd_toEndOf="@+id/divHomeDivider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDescChanceOfRain"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_desc_chance_of_rain"
                    android:textAppearance="@style/TextAppearance.Forecast.SubOpenSans"
                    app:layout_constraintBottom_toTopOf="@id/tvInfoChanceOfRain"
                    app:layout_constraintEnd_toEndOf="@+id/divHomeDivider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvInfoChanceOfRain"
                    android:layout_width="@dimen/custom_icon_width"
                    android:layout_height="@dimen/huge_margin"
                    android:gravity="center|top"
                    android:text="@string/text_info_chance_of_rain"
                    android:textAppearance="@style/TextAppearance.Forecast.BiasOpenSans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/divHomeDivider" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupHomeMainView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tvCelcius,menuVertical,divHomeDivider,tvInfoChanceOfRain,tvLocation,viewIllustration,tvCurrentTemp,tvCurrentSituation,tvCurrentDate,imageCloud,tvDescChanceOfRain,imageHumidity,tvDescHumidity,tvInfoHumidity,imageWind,tvDescWind,tvInfoWind" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvToday"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:gravity="center_vertical"
            android:text="@string/text_today"
            android:textAppearance="@style/TextAppearance.Forecast.HugeOpenSans"
            app:layout_constraintBottom_toTopOf="@id/textGuideline"
            app:layout_constraintEnd_toStartOf="@id/tvToFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardviewGuideline" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvToFragment"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:drawableEnd="@drawable/ic_forward"
            android:drawablePadding="@dimen/small_margin"
            android:gravity="center_vertical"
            android:text="@string/text_seven_days"
            android:textAppearance="@style/TextAppearance.Forecast.DefaultOpenSans"
            app:layout_constraintBottom_toTopOf="@id/textGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardviewGuideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeForecast"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginHorizontal="@dimen/screen_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:flow_horizontalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGuideline"
            tools:listitem="@layout/item_home_forecast" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupHomeRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="rvHomeForecast, tvToFragment, tvToday" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>